# HuskarUI

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README-zh_CN.md  README.md  UpdateLists.json
.cmake/: DelegateUIHelper.cmake  HuskarUIConfig.cmake.in  HuskarUIConfigVersion.cmake.in  HuskarUITargets.cmake.in  WinResource.rc.in
ai_tools/: README-zh_CN.md  README.md  query_metainfo.py
docs/: guide.metainfo.json  (+1 more)
gallery/: CMakeLists.txt
gallery/cpp/: creator.cpp  creator_p.h  customtheme.cpp  main.cpp
gallery/qml/: AboutPage.qml  Gallery.qml  Global.qml  HomePage.qml  SettingsPage.qml
gallery/qml/Controls/: CodeBox.qml  CodeRunner.qml  Description.qml  ThemeToken.qml
gallery/qml/Examples/DataDisplay/: ExpAvatar.qml  ExpBadge.qml  ExpCard.qml  ExpCarousel.qml  ExpCheckerBoard.qml  ExpCollapse.qml  ExpImagePreview.qml  ExpQrCode.qml  ExpSpin.qml  ExpTabView.qml  ExpTableView.qml  ExpTag.qml  ExpTimeline.qml  ExpToolTip.qml  ExpTourFocus.qml  ExpTourStep.qml  ExpTreeView.qml
gallery/qml/Examples/DataEnter/: ExpSwitch.qml
gallery/qml/Examples/DataEntry/: ExpAutoComplete.qml  ExpCheckBox.qml  ExpDatePicker.qml  ExpDateTimePicker.qml  ExpDateTimePickerPanel.qml  ExpInput.qml  ExpInputInteger.qml  ExpInputNumber.qml  ExpMultiSelect.qml  ExpOTPInput.qml  ExpRadio.qml  ExpRadioBlock.qml  ExpRate.qml  ExpSelect.qml  ExpSlider.qml  ExpSwitch.qml  ExpTextArea.qml  ExpTimePicker.qml
gallery/qml/Examples/Effect/: ExpAcrylic.qml  ExpLiquidGlass.qml  ExpShadow.qml  ExpSwitchEffect.qml
gallery/qml/Examples/Feedback/: ExpDrawer.qml  ExpEmpty.qml  ExpMessage.qml  ExpModal.qml  ExpNotification.qml  ExpPopconfirm.qml  ExpPopover.qml  ExpProgress.qml  ExpWatermark.qml
gallery/qml/Examples/General/: ExpButton.qml  ExpButtonBlock.qml  ExpCaptionBar.qml  ExpCaptionButton.qml  ExpCopyableText.qml  ExpIconButton.qml  ExpIconText.qml  ExpLabel.qml  ExpPopup.qml  ExpRadius.qml  ExpRectangle.qml  ExpText.qml  ExpWindow.qml
gallery/qml/Examples/Layout/: ExpDivider.qml  ExpGroupBox.qml  ExpSplitView.qml
gallery/qml/Examples/Navigation/: ExpBreadcrumb.qml  ExpContextMenu.qml  ExpMenu.qml  ExpPagination.qml  ExpScrollBar.qml
gallery/qml/Examples/Theme/: ExpTheme.qml
gallery/qml/Examples/Utils/: ExpAsyncHasher.qml
gallery/qml/Home/: AboutPage.qml  CreatorPage.qml  HomePage.qml  OverviewPage.qml  SettingsPage.qml
gallery/shaders/: effect1.frag
gallery/src/: customtheme.cpp
src/: CMakeLists.txt  HuskarUIConfig.cmake.in
src/cpp/: delapp.cpp  delapp.h  deldefinitions.h  delegateuiplugin.cpp  delglobal.h  husapp.cpp  husapp.h  husdefinitions.h  husglobal.h  huskaruiplugin.cpp
src/cpp/controls/: deliconfont.h  delrectangle.cpp  delrectangle.h  delwatermark.cpp  delwatermark.h  delwindowagent.cpp  delwindowagent.h  husiconfont.cpp  husqrcode.cpp  husqrcode.h  husrectangle.cpp  husrectangle.h  huswatermark.cpp  huswatermark.h  huswindowagent.cpp  huswindowagent.h
src/cpp/models/: qqmlabstractcolumnmodel.cpp  qqmlabstractcolumnmodel_p.h  qqmltreemodel.cpp  qqmltreemodel_p.h
src/cpp/theme/: delcolorgenerator.cpp  delcolorgenerator.h  delsizegenerator.cpp  delsizegenerator.h  delsystemthemehelper.cpp  delsystemthemehelper.h  deltheme.cpp  deltheme.h  deltheme_p.h  delthemefunctions.cpp  delthemefunctions.h  huscolorgenerator.cpp  husradiusgenerator.cpp  hussizegenerator.cpp  hussystemthemehelper.cpp  hussystemthemehelper.h  hustheme.cpp  hustheme.h  hustheme_p.h  husthemefunctions.cpp  husthemefunctions.h
src/cpp/utils/: delapi.cpp  delapi.h  delasynchasher.cpp  husapi.cpp  husapi.h  husasynchasher.cpp  husasynchasher.h  husrouter.cpp  husrouter.h
src/designer/: huskaruibasic.metainfo
src/imports/: HusAcrylic.qml  HusAnimatedImage.qml  HusAutoComplete.qml  HusAvatar.qml  HusBadge.qml  HusBreadcrumb.qml  HusButton.qml  HusButtonBlock.qml  HusCaptionBar.qml  HusCaptionButton.qml  HusCard.qml  HusCarousel.qml  HusCheckBox.qml  HusCheckerBoard.qml  HusCollapse.qml  HusColorPicker.qml  HusColorPickerPanel.qml  HusContextMenu.qml  HusCopyableText.qml  HusDatePicker.qml  HusDateTimePicker.qml  HusDateTimePickerPanel.qml  HusDivider.qml  HusDrawer.qml  HusEmpty.qml  HusIconButton.qml  HusIconText.qml  HusImage.qml  HusImagePreview.qml  HusInput.qml  HusInputInteger.qml  HusInputNumber.qml  HusLabel.qml  HusLiquidGlass.qml  HusMenu.qml  HusMessage.qml  HusModal.qml  HusMoveMouseArea.qml  HusMultiCheckBox.qml  HusMultiSelect.qml  (+33 more)
src/imports/DelegateUI/Controls/: DelAcrylic.qml  DelAutoComplete.qml  DelAvatar.qml  DelBadge.qml  DelBreadcrumb.qml  DelButton.qml  DelButtonBlock.qml  DelCaptionBar.qml  DelCaptionButton.qml  DelCard.qml  DelCarousel.qml  DelCheckBox.qml  DelCollapse.qml  DelContextMenu.qml  DelCopyableText.qml  DelDatePicker.qml  DelDivider.qml  DelDrawer.qml  DelIconButton.qml  DelIconText.qml  DelInput.qml  DelInputNumber.qml  DelMenu.qml  DelMessage.qml  DelMoveMouseArea.qml  DelOTPInput.qml  DelPagination.qml  DelPopup.qml  DelProgress.qml  DelRadio.qml  DelRadioBlock.qml  DelRate.qml  DelResizeMouseArea.qml  DelScrollBar.qml  DelSelect.qml  DelSlider.qml  DelSwitch.qml  DelSwitchEffect.qml  DelTabView.qml  DelTableView.qml  (+8 more)
src/resources/theme/: HusSplitView.json  HusTreeView.json  Index.json
src/shaders/: deltour.frag  husliquidglass.frag  husliquidglass.vert
src/theme/: DelAutoComplete.json  DelButton.json  DelCaptionButton.json  DelCollapse.json  DelCopyableText.json  DelDatePicker.json  DelDivider.json  DelIconButton.json  DelMenu.json  DelMessage.json  DelPagination.json  DelRadio.json  DelRate.json  DelScrollBar.json  DelSelect.json  DelSlider.json  DelTabView.json  DelTableView.json  DelTimeline.json  DelTour.json  HusAutoComplete.json  HusCaptionButton.json  HusCheckBox.json  HusCopyableText.json  HusDatePicker.json  HusDateTimePicker.json  HusDivider.json  HusEmpty.json  HusInput.json  HusMenu.json  HusMessage.json  HusModal.json  HusNotification.json  HusPagination.json  HusPopconfirm.json  HusPopup.json  HusRadio.json  HusRate.json  HusSelect.json  HusSpin.json  (+4 more)
src_impl/: CMakeLists.txt
src_impl/cpp/: huswindowagent.cpp  huswindowagent.h
(+49 files in other folders)
